feat: unified enable/disable mechanism for integrations
Add consistent enable flags for Discord and Slack adapters:
- MERCURY_ENABLE_DISCORD (default: false)
- MERCURY_ENABLE_SLACK (default: false)

Behavior:
- Flag false/unset → integration disabled (even with credentials)
- Flag true + credentials missing → error on startup
- Flag true + credentials present → integration enabled

This matches the existing MERCURY_ENABLE_WHATSAPP pattern and allows
temporarily disabling integrations without removing credentials.

Also fixes pre-existing lint issues (unused imports, formatting).

Closes #47

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -735,7 +735,7 @@
         if (dashboard.roles && dashboard.roles.length > 0) {
           const roleRows = dashboard.roles.map(r => {
             const roleClass = r.role === 'admin' ? 'green' : '';
-            const shortUserId = r.userId.length > 20 ? '...' + r.userId.slice(-15) : r.userId;
+            const shortUserId = r.userId.length > 20 ? `...${r.userId.slice(-15)}` : r.userId;
             return `<tr>
               <td><span class="badge">${r.platform}</span></td>
               <td class="mono truncate" title="${escapeHtml(r.userId)}">${escapeHtml(shortUserId)}</td>
